changed folder structure

--- a/src/logistic_regression.ipynb
+++ b/src/logistic_regression.ipynb
@@ -10,7 +10,7 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import KFold, cross_val_score, train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
     "from sklearn.preprocessing import StandardScaler, LabelEncoder"
@@ -23,9 +23,10 @@
    "outputs": [],
    "source": [
     "class DataSetHandler:\n",
-    "    def __init__(self, path):\n",
+    "    def __init__(self, path, random_state):\n",
     "        self.file_path = path\n",
     "        self.data = pd.read_csv(self.file_path)\n",
+    "        self.random_state = random_state\n",
     "        self.X = None\n",
     "        self.Y = None\n",
     "        self.X_train = None\n",
@@ -33,6 +34,7 @@
     "        self.Y_train = None\n",
     "        self.Y_test = None\n",
     "        self.labels = None\n",
+    "        self.folds = None\n",
     "    \n",
     "    \n",
     "    def preprocess(self, dropna: bool, impute_value: float = None) -> None:\n",
@@ -54,8 +56,14 @@
     "            })\n",
     "        self.X = self.data.drop(columns=[self.data.columns[-1]])\n",
     "        self.X = self.X.select_dtypes(include=['number'])\n",
+    "\n",
+    "    def createKfold(self, k: int):\n",
+    "        \n",
+    "        \n",
     "    \n",
-    "    def train_test_split(self, train_size: float, random_state: int) -> None:\n",
+    "    \n",
+    "        \n",
+    "\n",
     " \n",
     "        \n",
     "        \n",
