more processing scripts

--- a/src/preprocessing/process_lymphoma24.ipynb
+++ b/src/preprocessing/process_lymphoma24.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,17 +64,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "annot = pd.read_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/B_cell_lymphoma_24/quantification/cells_annotation.csv')\n",
-    "exp = pd.read_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/B_cell_lymphoma_24/quantification/cells_expression.csv')"
+    "annot = pd.read_csv('/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/lymphoma_24/quantification/cells_annotation.csv')\n",
+    "exp = pd.read_csv('/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/lymphoma_24/quantification/cells_expression.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
        "[5690284 rows x 6 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
        "[5690284 rows x 53 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -979,7 +979,7 @@
        "[5690284 rows x 59 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -990,18 +990,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.drop(columns=['Unnamed: 0', 'unique_region', 'PatientID'], inplace=True)\n",
+    "df.drop(columns=['Unnamed: 0','PatientID', 'x', 'y', 'unique_cell_id'], inplace=True)\n",
     "df.rename(columns={'Merged_final': 'cell_type'}, inplace=True)\n",
-    "df.to_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/B_cell_lymphoma_24/quantification/processed/lymphoma_24_cleaned.csv', index=False)"
+    "df.to_csv('/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/lymphoma_24/quantification/processed/lymphoma_24_cleaned.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1036,15 +1036,15 @@
        "      <th>CTLA4</th>\n",
        "      <th>CXCL13</th>\n",
        "      <th>...</th>\n",
+       "      <th>CD34</th>\n",
+       "      <th>CD31</th>\n",
        "      <th>CD90</th>\n",
        "      <th>PDPN</th>\n",
        "      <th>HLA-DR</th>\n",
        "      <th>Ki67</th>\n",
        "      <th>Hoechst1</th>\n",
        "      <th>DRAQ5</th>\n",
-       "      <th>unique_cell_id</th>\n",
-       "      <th>x</th>\n",
-       "      <th>y</th>\n",
+       "      <th>unique_region</th>\n",
        "      <th>cell_type</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1062,15 +1062,15 @@
        "      <td>-0.28339</td>\n",
        "      <td>-0.18100</td>\n",
        "      <td>...</td>\n",
+       "      <td>-0.11358</td>\n",
+       "      <td>-0.15622</td>\n",
        "      <td>-0.17589</td>\n",
        "      <td>-0.51105</td>\n",
        "      <td>0.17505</td>\n",
        "      <td>-0.26354</td>\n",
        "      <td>-1.32280</td>\n",
        "      <td>-0.64764</td>\n",
-       "      <td>191_1_1_1</td>\n",
-       "      <td>8906</td>\n",
-       "      <td>48</td>\n",
+       "      <td>191_1reg001</td>\n",
        "      <td>B</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1086,15 +1086,15 @@
        "      <td>-0.60082</td>\n",
        "      <td>-0.36095</td>\n",
        "      <td>...</td>\n",
+       "      <td>-0.33260</td>\n",
+       "      <td>-0.19951</td>\n",
        "      <td>-0.64844</td>\n",
        "      <td>-0.48199</td>\n",
        "      <td>0.01763</td>\n",
        "      <td>-0.26354</td>\n",
        "      <td>-0.25186</td>\n",
        "      <td>-0.47997</td>\n",
-       "      <td>191_1_1_3</td>\n",
-       "      <td>2791</td>\n",
-       "      <td>4347</td>\n",
+       "      <td>191_1reg001</td>\n",
        "      <td>B</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1110,15 +1110,15 @@
        "      <td>-0.59838</td>\n",
        "      <td>3.52891</td>\n",
        "      <td>...</td>\n",
+       "      <td>-0.37824</td>\n",
+       "      <td>-0.19951</td>\n",
        "      <td>0.08461</td>\n",
        "      <td>0.58979</td>\n",
        "      <td>-0.54385</td>\n",
        "      <td>-0.25604</td>\n",
        "      <td>-0.50633</td>\n",
        "      <td>-0.10229</td>\n",
-       "      <td>191_1_1_6</td>\n",
-       "      <td>934</td>\n",
-       "      <td>2566</td>\n",
+       "      <td>191_1reg001</td>\n",
        "      <td>FDC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1134,15 +1134,15 @@
        "      <td>-0.67635</td>\n",
        "      <td>-0.37474</td>\n",
        "      <td>...</td>\n",
+       "      <td>-0.37824</td>\n",
+       "      <td>-0.19951</td>\n",
        "      <td>-0.62670</td>\n",
        "      <td>-0.43697</td>\n",
        "      <td>0.34817</td>\n",
        "      <td>-0.25083</td>\n",
        "      <td>-0.71474</td>\n",
        "      <td>-0.53275</td>\n",
-       "      <td>191_1_1_7</td>\n",
-       "      <td>8389</td>\n",
-       "      <td>2240</td>\n",
+       "      <td>191_1reg001</td>\n",
        "      <td>B</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1158,15 +1158,15 @@
        "      <td>-0.54858</td>\n",
        "      <td>-0.34971</td>\n",
        "      <td>...</td>\n",
+       "      <td>-0.32474</td>\n",
+       "      <td>-0.18799</td>\n",
        "      <td>-0.58476</td>\n",
        "      <td>-0.49491</td>\n",
        "      <td>-0.44408</td>\n",
        "      <td>0.36189</td>\n",
        "      <td>-0.91448</td>\n",
        "      <td>-0.91517</td>\n",
-       "      <td>191_1_1_8</td>\n",
-       "      <td>4147</td>\n",
-       "      <td>1312</td>\n",
+       "      <td>191_1reg001</td>\n",
        "      <td>B</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1206,15 +1206,15 @@
        "      <td>0.07188</td>\n",
        "      <td>-0.02120</td>\n",
        "      <td>...</td>\n",
+       "      <td>0.01683</td>\n",
+       "      <td>-0.26526</td>\n",
        "      <td>0.52171</td>\n",
        "      <td>-0.01165</td>\n",
        "      <td>0.02798</td>\n",
        "      <td>-0.30030</td>\n",
        "      <td>6.55901</td>\n",
        "      <td>9.09580</td>\n",
-       "      <td>191_5_4_182277</td>\n",
-       "      <td>5403</td>\n",
-       "      <td>6658</td>\n",
+       "      <td>191_5reg004</td>\n",
        "      <td>Macro</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1230,15 +1230,15 @@
        "      <td>-0.40786</td>\n",
        "      <td>-0.12112</td>\n",
        "      <td>...</td>\n",
+       "      <td>1.59007</td>\n",
+       "      <td>0.84895</td>\n",
        "      <td>3.71388</td>\n",
        "      <td>-0.03236</td>\n",
        "      <td>-0.29778</td>\n",
        "      <td>-0.29651</td>\n",
        "      <td>-0.61696</td>\n",
        "      <td>0.76337</td>\n",
-       "      <td>191_5_4_182278</td>\n",
-       "      <td>3959</td>\n",
-       "      <td>6402</td>\n",
+       "      <td>191_5reg004</td>\n",
        "      <td>Stromal cells</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1254,15 +1254,15 @@
        "      <td>0.60306</td>\n",
        "      <td>0.07873</td>\n",
        "      <td>...</td>\n",
+       "      <td>0.23800</td>\n",
+       "      <td>-0.26777</td>\n",
        "      <td>0.53593</td>\n",
        "      <td>0.17325</td>\n",
        "      <td>0.40368</td>\n",
        "      <td>-0.29209</td>\n",
        "      <td>6.30808</td>\n",
        "      <td>9.15777</td>\n",
-       "      <td>191_5_4_182279</td>\n",
-       "      <td>3886</td>\n",
-       "      <td>6269</td>\n",
+       "      <td>191_5reg004</td>\n",
        "      <td>B</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1278,15 +1278,15 @@
        "      <td>0.64125</td>\n",
        "      <td>0.22455</td>\n",
        "      <td>...</td>\n",
+       "      <td>0.46037</td>\n",
+       "      <td>-0.13118</td>\n",
        "      <td>1.94153</td>\n",
        "      <td>0.14947</td>\n",
        "      <td>0.31061</td>\n",
        "      <td>-0.25096</td>\n",
        "      <td>4.66270</td>\n",
        "      <td>6.38957</td>\n",
-       "      <td>191_5_4_182280</td>\n",
-       "      <td>5670</td>\n",
-       "      <td>6830</td>\n",
+       "      <td>191_5reg004</td>\n",
        "      <td>B</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1302,20 +1302,20 @@
        "      <td>0.16622</td>\n",
        "      <td>0.29536</td>\n",
        "      <td>...</td>\n",
+       "      <td>-0.03366</td>\n",
+       "      <td>-0.24456</td>\n",
        "      <td>0.09321</td>\n",
        "      <td>1.78324</td>\n",
        "      <td>-0.09586</td>\n",
        "      <td>-0.24585</td>\n",
        "      <td>1.40812</td>\n",
        "      <td>1.07052</td>\n",
-       "      <td>191_5_4_182281</td>\n",
-       "      <td>5206</td>\n",
-       "      <td>5781</td>\n",
+       "      <td>191_5reg004</td>\n",
        "      <td>CD4T</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5690284 rows × 56 columns</p>\n",
+       "<p>5690284 rows × 54 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1332,36 +1332,36 @@
        "5690282  0.28942 -0.20068 -0.02752  0.48397  0.02224 -0.23249  0.03104   \n",
        "5690283  0.96470  0.53440  0.46541  0.88646  0.63267 -0.01071  0.77165   \n",
        "\n",
-       "            IL10    CTLA4   CXCL13  ...     CD90     PDPN   HLA-DR     Ki67  \\\n",
-       "0       -0.08173 -0.28339 -0.18100  ... -0.17589 -0.51105  0.17505 -0.26354   \n",
-       "1       -0.72094 -0.60082 -0.36095  ... -0.64844 -0.48199  0.01763 -0.26354   \n",
-       "2        0.30060 -0.59838  3.52891  ...  0.08461  0.58979 -0.54385 -0.25604   \n",
-       "3       -0.71092 -0.67635 -0.37474  ... -0.62670 -0.43697  0.34817 -0.25083   \n",
-       "4       -0.68932 -0.54858 -0.34971  ... -0.58476 -0.49491 -0.44408  0.36189   \n",
+       "            IL10    CTLA4   CXCL13  ...     CD34     CD31     CD90     PDPN  \\\n",
+       "0       -0.08173 -0.28339 -0.18100  ... -0.11358 -0.15622 -0.17589 -0.51105   \n",
+       "1       -0.72094 -0.60082 -0.36095  ... -0.33260 -0.19951 -0.64844 -0.48199   \n",
+       "2        0.30060 -0.59838  3.52891  ... -0.37824 -0.19951  0.08461  0.58979   \n",
+       "3       -0.71092 -0.67635 -0.37474  ... -0.37824 -0.19951 -0.62670 -0.43697   \n",
+       "4       -0.68932 -0.54858 -0.34971  ... -0.32474 -0.18799 -0.58476 -0.49491   \n",
        "...          ...      ...      ...  ...      ...      ...      ...      ...   \n",
-       "5690279 -0.53783  0.07188 -0.02120  ...  0.52171 -0.01165  0.02798 -0.30030   \n",
-       "5690280 -0.61545 -0.40786 -0.12112  ...  3.71388 -0.03236 -0.29778 -0.29651   \n",
-       "5690281  0.06823  0.60306  0.07873  ...  0.53593  0.17325  0.40368 -0.29209   \n",
-       "5690282  0.66425  0.64125  0.22455  ...  1.94153  0.14947  0.31061 -0.25096   \n",
-       "5690283  0.27750  0.16622  0.29536  ...  0.09321  1.78324 -0.09586 -0.24585   \n",
+       "5690279 -0.53783  0.07188 -0.02120  ...  0.01683 -0.26526  0.52171 -0.01165   \n",
+       "5690280 -0.61545 -0.40786 -0.12112  ...  1.59007  0.84895  3.71388 -0.03236   \n",
+       "5690281  0.06823  0.60306  0.07873  ...  0.23800 -0.26777  0.53593  0.17325   \n",
+       "5690282  0.66425  0.64125  0.22455  ...  0.46037 -0.13118  1.94153  0.14947   \n",
+       "5690283  0.27750  0.16622  0.29536  ... -0.03366 -0.24456  0.09321  1.78324   \n",
        "\n",
-       "         Hoechst1    DRAQ5  unique_cell_id     x     y      cell_type  \n",
-       "0        -1.32280 -0.64764       191_1_1_1  8906    48              B  \n",
-       "1        -0.25186 -0.47997       191_1_1_3  2791  4347              B  \n",
-       "2        -0.50633 -0.10229       191_1_1_6   934  2566            FDC  \n",
-       "3        -0.71474 -0.53275       191_1_1_7  8389  2240              B  \n",
-       "4        -0.91448 -0.91517       191_1_1_8  4147  1312              B  \n",
-       "...           ...      ...             ...   ...   ...            ...  \n",
-       "5690279   6.55901  9.09580  191_5_4_182277  5403  6658          Macro  \n",
-       "5690280  -0.61696  0.76337  191_5_4_182278  3959  6402  Stromal cells  \n",
-       "5690281   6.30808  9.15777  191_5_4_182279  3886  6269              B  \n",
-       "5690282   4.66270  6.38957  191_5_4_182280  5670  6830              B  \n",
-       "5690283   1.40812  1.07052  191_5_4_182281  5206  5781           CD4T  \n",
+       "          HLA-DR     Ki67  Hoechst1    DRAQ5  unique_region      cell_type  \n",
+       "0        0.17505 -0.26354  -1.32280 -0.64764    191_1reg001              B  \n",
+       "1        0.01763 -0.26354  -0.25186 -0.47997    191_1reg001              B  \n",
+       "2       -0.54385 -0.25604  -0.50633 -0.10229    191_1reg001            FDC  \n",
+       "3        0.34817 -0.25083  -0.71474 -0.53275    191_1reg001              B  \n",
+       "4       -0.44408  0.36189  -0.91448 -0.91517    191_1reg001              B  \n",
+       "...          ...      ...       ...      ...            ...            ...  \n",
+       "5690279  0.02798 -0.30030   6.55901  9.09580    191_5reg004          Macro  \n",
+       "5690280 -0.29778 -0.29651  -0.61696  0.76337    191_5reg004  Stromal cells  \n",
+       "5690281  0.40368 -0.29209   6.30808  9.15777    191_5reg004              B  \n",
+       "5690282  0.31061 -0.25096   4.66270  6.38957    191_5reg004              B  \n",
+       "5690283 -0.09586 -0.24585   1.40812  1.07052    191_5reg004           CD4T  \n",
        "\n",
-       "[5690284 rows x 56 columns]"
+       "[5690284 rows x 54 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
