--- a/src/logistic_regression.ipynb
+++ b/src/logistic_regression.ipynb
@@ -10,7 +10,7 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.model_selection import KFold, cross_val_score, train_test_split\n",
+    "from sklearn.model_selection import GroupKFold cross_val_score, train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
     "from sklearn.preprocessing import StandardScaler, LabelEncoder"
@@ -55,10 +55,16 @@
     "            'phenotype': label_encoder.classes_\n",
     "            })\n",
     "        self.X = self.data.drop(columns=[self.data.columns[-1]])\n",
-    "        self.X = self.X.select_dtypes(include=['number'])\n",
     "\n",
-    "    def createKfold(self, k: int):\n",
+    "    def createKfold(self, k: int, group_identifier: str) -> None:\n",
+    "        if not isinstance(k, int):\n",
+    "            raise TypeError(\"k must be an integer\")\n",
+    "        if not isinstance(group_identifier, str):\n",
+    "            raise TypeError(\"group_identifier must be a string\")\n",
     "        \n",
+    "        self.folds = GroupKFold(n_splits=k)\n",
+    "        \n",
+    "\n",
     "        \n",
     "    \n",
     "    \n",
