--- a/src/logistic_regression.ipynb
+++ b/src/logistic_regression.ipynb
@@ -10,7 +10,7 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.model_selection import GroupKFold cross_val_score, train_test_split\n",
+    "from sklearn.model_selection import GroupKFold, KFold, cross_val_score, train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
     "from sklearn.preprocessing import StandardScaler, LabelEncoder"
@@ -34,10 +34,11 @@
     "        self.Y_train = None\n",
     "        self.Y_test = None\n",
     "        self.labels = None\n",
-    "        self.folds = None\n",
+    "        self.group_identifier = None\n",
+    "        self.kfolds = None\n",
     "    \n",
     "    \n",
-    "    def preprocess(self, dropna: bool, impute_value: float = None) -> None:\n",
+    "    def preprocess(self, dropna: bool, impute_value: float = None, phenotype_index: int = -1, group_identifier_index: int = None) -> None:\n",
     "        if not isinstance(dropna, bool):\n",
     "            raise TypeError(\"dropna must be a boolean value\")\n",
     "        if not isinstance(impute_value, (float, int, type(None))):\n",
@@ -49,20 +50,24 @@
     "            self.data.fillna(impute_value, inplace=True)\n",
     "\n",
     "        label_encoder = LabelEncoder()\n",
-    "        self.Y = label_encoder.fit_transform(self.data[:, -1])\n",
+    "        self.Y = label_encoder.fit_transform(self.data[:, phenotype_index])\n",
     "        self.labels = pd.DataFrame({\n",
     "            'label': range(len(label_encoder.classes_)),\n",
     "            'phenotype': label_encoder.classes_\n",
     "            })\n",
     "        self.X = self.data.drop(columns=[self.data.columns[-1]])\n",
+    "        if group_identifier_index is not None:\n",
+    "            self.group_identifier = self.data.iloc[:, group_identifier_index]\n",
+    "    \n",
     "\n",
-    "    def createKfold(self, k: int, group_identifier: str) -> None:\n",
+    "    def createKfold(self, k: int) -> None:\n",
     "        if not isinstance(k, int):\n",
     "            raise TypeError(\"k must be an integer\")\n",
-    "        if not isinstance(group_identifier, str):\n",
-    "            raise TypeError(\"group_identifier must be a string\")\n",
     "        \n",
-    "        self.folds = GroupKFold(n_splits=k)\n",
+    "        if self.group_identifier is not None:\n",
+    "            self.kfolds = GroupKFold(n_splits=k)\n",
+    "        else:\n",
+    "            self.kfolds = KFold(n_splits=k, shuffle=True, random_state=self.random_state)\n",
     "        \n",
     "\n",
     "        \n",
