fold creation script

--- a/src/preprocessing/process_TB.ipynb
+++ b/src/preprocessing/process_TB.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1636,7 +1636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2019,17 +2019,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tb.to_csv('/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/tb_sarc/quantification/processed/allTB-ME_annotated_reshaped.csv')\n",
-    "sarc.to_csv('/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/tb_sarc/quantification/processed/allTB-sarcoid-scdata_reshaped.csv')"
+    "tb.to_csv('/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/tb_sarc/quantification/processed/allTB-ME_annotated_reshaped.csv', index=False)\n",
+    "sarc.to_csv('/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/tb_sarc/quantification/processed/allTB-sarcoid-scdata_reshaped.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2039,12 +2039,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tb.to_csv('/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/tb_sarc/quantification/processed/allTB-ME_annotated_reshaped_cleaned.csv')\n",
-    "sarc.to_csv('/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/tb_sarc/quantification/processed/allTB-sarcoid-scdata_reshaped_cleaned.csv')"
+    "tb.to_csv('/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/tb_sarc/quantification/processed/allTB-ME_annotated_reshaped_cleaned.csv', index=False)\n",
+    "sarc.to_csv('/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/tb_sarc/quantification/processed/allTB-sarcoid-scdata_reshaped_cleaned.csv', index=False)"
    ]
   },
   {
