finalized the logreg script

--- a/src/apply_logreg.ipynb
+++ b/src/apply_logreg.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "\n",
-    "from logistic_regression import MultinomialLogisticRegression"
+    "from logistic_regression import MultinomialLogisticRegression\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -16,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cHL2 = MultinomialLogisticRegression(random_state = 20240924, penalty='elasticnet', n_jobs=-1, l1_ratio=0.5, max_iter=5000)"
+    "cHL2 = MultinomialLogisticRegression(random_state = 42, penalty='elasticnet', n_jobs=-1, l1_ratio=0.5, max_iter=5000)"
    ]
   },
   {
@@ -35,6 +36,372 @@
    "outputs": [],
    "source": [
     "cHL2.save_results(save_path='/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/Maps_data/cHL_2_MIBI/results_logreg', label_path='/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/Maps_data/cHL_2_MIBI/quantification/processed/labels.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MultinomialLogisticRegression class initialized successfully with the following parameters:\n",
+      "  Random State: 42\n",
+      "  Max Iterations: 5000\n",
+      "  C (Inverse of Regularization Strength): 1.0\n",
+      "  Penalty: elasticnet\n",
+      "  L1 Ratio: 0.5\n",
+      "  Solver: saga\n",
+      "  Number of Jobs: -1\n"
+     ]
+    }
+   ],
+   "source": [
+    "cHL1 = MultinomialLogisticRegression(random_state = 42, penalty='elasticnet', n_jobs=-1, l1_ratio=0.5, max_iter=5000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'train': ['fold_1_train.csv', 'fold_2_train.csv', 'fold_3_train.csv', 'fold_4_train.csv', 'fold_5_train.csv'], 'test': ['fold_1_test.csv', 'fold_2_test.csv', 'fold_3_test.csv', 'fold_4_test.csv', 'fold_5_test.csv']}\n",
+      "Data in fold_1_train.csv and fold_1_test.csv is clean.\n",
+      "Data in fold_2_train.csv and fold_2_test.csv is clean.\n",
+      "Data in fold_3_train.csv and fold_3_test.csv is clean.\n",
+      "Data in fold_4_train.csv and fold_4_test.csv is clean.\n",
+      "Data in fold_5_train.csv and fold_5_test.csv is clean.\n",
+      "Training fold 1...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lukashat/miniforge3/envs/cML_benchmark/lib/python3.10/site-packages/sklearn/linear_model/_logistic.py:1247: FutureWarning: 'multi_class' was deprecated in version 1.5 and will be removed in 1.7. From then on, it will always use 'multinomial'. Leave it to its default value to avoid this warning.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fold 1 results:\n",
+      "Precision: 0.6202726810445236\n",
+      "Recall: 0.653124113168902\n",
+      "Accuracy: 0.653124113168902\n",
+      "F1 Score: 0.48076629697245965\n",
+      "Weighted F1 Score: 0.6115873165361542\n",
+      "==================================================\n",
+      "Training fold 2...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lukashat/miniforge3/envs/cML_benchmark/lib/python3.10/site-packages/sklearn/linear_model/_logistic.py:1247: FutureWarning: 'multi_class' was deprecated in version 1.5 and will be removed in 1.7. From then on, it will always use 'multinomial'. Leave it to its default value to avoid this warning.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fold 2 results:\n",
+      "Precision: 0.6181130926680499\n",
+      "Recall: 0.6489543757247892\n",
+      "Accuracy: 0.6489543757247892\n",
+      "F1 Score: 0.5058244719097318\n",
+      "Weighted F1 Score: 0.6106412380449157\n",
+      "==================================================\n",
+      "Training fold 3...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lukashat/miniforge3/envs/cML_benchmark/lib/python3.10/site-packages/sklearn/linear_model/_logistic.py:1247: FutureWarning: 'multi_class' was deprecated in version 1.5 and will be removed in 1.7. From then on, it will always use 'multinomial'. Leave it to its default value to avoid this warning.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fold 3 results:\n",
+      "Precision: 0.6294144756711427\n",
+      "Recall: 0.6299925154793495\n",
+      "Accuracy: 0.6299925154793495\n",
+      "F1 Score: 0.49476012092084803\n",
+      "Weighted F1 Score: 0.5939096584645683\n",
+      "==================================================\n",
+      "Training fold 4...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lukashat/miniforge3/envs/cML_benchmark/lib/python3.10/site-packages/sklearn/linear_model/_logistic.py:1247: FutureWarning: 'multi_class' was deprecated in version 1.5 and will be removed in 1.7. From then on, it will always use 'multinomial'. Leave it to its default value to avoid this warning.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fold 4 results:\n",
+      "Precision: 0.6080845124113411\n",
+      "Recall: 0.6313603637741568\n",
+      "Accuracy: 0.6313603637741568\n",
+      "F1 Score: 0.4927196604734352\n",
+      "Weighted F1 Score: 0.5900422078621147\n",
+      "==================================================\n",
+      "Training fold 5...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lukashat/miniforge3/envs/cML_benchmark/lib/python3.10/site-packages/sklearn/linear_model/_logistic.py:1247: FutureWarning: 'multi_class' was deprecated in version 1.5 and will be removed in 1.7. From then on, it will always use 'multinomial'. Leave it to its default value to avoid this warning.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fold 5 results:\n",
+      "Precision: 0.6257937554129854\n",
+      "Recall: 0.6450268943486634\n",
+      "Accuracy: 0.6450268943486634\n",
+      "F1 Score: 0.5168099333448597\n",
+      "Weighted F1 Score: 0.6119643964883487\n",
+      "==================================================\n",
+      "Average Accuracy across all folds: 0.6416916524991721\n",
+      "Average F1 Score across all folds: 0.4981760967242669\n",
+      "Average Weighted F1 Score across all folds: 0.6036289634792202\n",
+      "Average Precision across all folds: 0.6203357034416086\n",
+      "Average Recall across all folds: 0.6416916524991721\n"
+     ]
+    }
+   ],
+   "source": [
+    "cHL1.train_and_evaluate_manual(path='/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/Maps_data/cHL_1_MIBI/quantification/processed/kfolds')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The path /Volumes/Lukas_SSD/phenotyping_benchmark/datasets/Maps_data/cHL_1_MIBI/results_logreg exists. Saving results in the specified directory.\n",
+      "Saving average results...\n",
+      "Saving confusion matrices...\n",
+      "Saving classification reports...\n",
+      "Saving model...\n",
+      "Results and model saved successfully in /Volumes/Lukas_SSD/phenotyping_benchmark/datasets/Maps_data/cHL_1_MIBI/results_logreg.\n"
+     ]
+    }
+   ],
+   "source": [
+    "cHL1.save_results(save_path='/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/Maps_data/cHL_1_MIBI/results_logreg', label_path='/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/Maps_data/cHL_1_MIBI/quantification/processed/labels.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MultinomialLogisticRegression class initialized successfully with the following parameters:\n",
+      "  Random State: 42\n",
+      "  Max Iterations: 5000\n",
+      "  C (Inverse of Regularization Strength): 1.0\n",
+      "  Penalty: elasticnet\n",
+      "  L1 Ratio: 0.5\n",
+      "  Solver: saga\n",
+      "  Number of Jobs: -1\n"
+     ]
+    }
+   ],
+   "source": [
+    "cHL_CODEX = MultinomialLogisticRegression(random_state = 42, penalty='elasticnet', n_jobs=-1, l1_ratio=0.5, max_iter=5000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'train': ['fold_1_train.csv', 'fold_2_train.csv', 'fold_3_train.csv', 'fold_4_train.csv', 'fold_5_train.csv'], 'test': ['fold_1_test.csv', 'fold_2_test.csv', 'fold_3_test.csv', 'fold_4_test.csv', 'fold_5_test.csv']}\n",
+      "Data in fold_1_train.csv and fold_1_test.csv is clean.\n",
+      "Data in fold_2_train.csv and fold_2_test.csv is clean.\n",
+      "Data in fold_3_train.csv and fold_3_test.csv is clean.\n",
+      "Data in fold_4_train.csv and fold_4_test.csv is clean.\n",
+      "Data in fold_5_train.csv and fold_5_test.csv is clean.\n",
+      "Training fold 1...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lukashat/miniforge3/envs/cML_benchmark/lib/python3.10/site-packages/sklearn/linear_model/_logistic.py:1247: FutureWarning: 'multi_class' was deprecated in version 1.5 and will be removed in 1.7. From then on, it will always use 'multinomial'. Leave it to its default value to avoid this warning.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fold 1 results:\n",
+      "Precision: 0.7950905832614765\n",
+      "Recall: 0.7938147916231824\n",
+      "Accuracy: 0.7938147916231824\n",
+      "F1 Score: 0.759342352744918\n",
+      "Weighted F1 Score: 0.7927549611431954\n",
+      "==================================================\n",
+      "Training fold 2...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lukashat/miniforge3/envs/cML_benchmark/lib/python3.10/site-packages/sklearn/linear_model/_logistic.py:1247: FutureWarning: 'multi_class' was deprecated in version 1.5 and will be removed in 1.7. From then on, it will always use 'multinomial'. Leave it to its default value to avoid this warning.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fold 2 results:\n",
+      "Precision: 0.7934192830125193\n",
+      "Recall: 0.7926668058164614\n",
+      "Accuracy: 0.7926668058164614\n",
+      "F1 Score: 0.7651591518191178\n",
+      "Weighted F1 Score: 0.7917909014358729\n",
+      "==================================================\n",
+      "Training fold 3...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lukashat/miniforge3/envs/cML_benchmark/lib/python3.10/site-packages/sklearn/linear_model/_logistic.py:1247: FutureWarning: 'multi_class' was deprecated in version 1.5 and will be removed in 1.7. From then on, it will always use 'multinomial'. Leave it to its default value to avoid this warning.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fold 3 results:\n",
+      "Precision: 0.7915298889172603\n",
+      "Recall: 0.7915883949071175\n",
+      "Accuracy: 0.7915883949071175\n",
+      "F1 Score: 0.7636176217157306\n",
+      "Weighted F1 Score: 0.7897319468269247\n",
+      "==================================================\n",
+      "Training fold 4...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lukashat/miniforge3/envs/cML_benchmark/lib/python3.10/site-packages/sklearn/linear_model/_logistic.py:1247: FutureWarning: 'multi_class' was deprecated in version 1.5 and will be removed in 1.7. From then on, it will always use 'multinomial'. Leave it to its default value to avoid this warning.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fold 4 results:\n",
+      "Precision: 0.7896981524282978\n",
+      "Recall: 0.7875878383079385\n",
+      "Accuracy: 0.7875878383079385\n",
+      "F1 Score: 0.7545296807628179\n",
+      "Weighted F1 Score: 0.7874066620896963\n",
+      "==================================================\n",
+      "Training fold 5...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lukashat/miniforge3/envs/cML_benchmark/lib/python3.10/site-packages/sklearn/linear_model/_logistic.py:1247: FutureWarning: 'multi_class' was deprecated in version 1.5 and will be removed in 1.7. From then on, it will always use 'multinomial'. Leave it to its default value to avoid this warning.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fold 5 results:\n",
+      "Precision: 0.7920651951909955\n",
+      "Recall: 0.7909970082794128\n",
+      "Accuracy: 0.7909970082794128\n",
+      "F1 Score: 0.7606660181087939\n",
+      "Weighted F1 Score: 0.7903634441600309\n",
+      "==================================================\n",
+      "Average Accuracy across all folds: 0.7913309677868224\n",
+      "Average F1 Score across all folds: 0.7606629650302755\n",
+      "Average Weighted F1 Score across all folds: 0.7904095831311441\n",
+      "Average Precision across all folds: 0.7923606205621099\n",
+      "Average Recall across all folds: 0.7913309677868224\n"
+     ]
+    }
+   ],
+   "source": [
+    "cHL_CODEX.train_and_evaluate_manual(path='/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/Maps_data/cHL_CODEX/quantification/processed/kfolds')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The path /Volumes/Lukas_SSD/phenotyping_benchmark/datasets/Maps_data/cHL_CODEX/results_logreg exists. Saving results in the specified directory.\n",
+      "Saving average results...\n",
+      "Saving confusion matrices...\n",
+      "Saving classification reports...\n",
+      "Saving model...\n",
+      "Results and model saved successfully in /Volumes/Lukas_SSD/phenotyping_benchmark/datasets/Maps_data/cHL_CODEX/results_logreg.\n"
+     ]
+    }
+   ],
+   "source": [
+    "cHL_CODEX.save_results(save_path='/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/Maps_data/cHL_CODEX/results_logreg', label_path='/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/Maps_data/cHL_CODEX/quantification/processed/labels.csv')"
    ]
   }
  ],
