--- a/src/apply_logreg.ipynb
+++ b/src/apply_logreg.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cHL2 = MultinomialLogisticRegression(random_state = 42, penalty='elasticnet', n_jobs=-1, l1_ratio=0.5, max_iter=1000)"
+    "cHL2 = MultinomialLogisticRegression(random_state = 42, n_jobs=-1, max_iter=1000)"
    ]
   },
   {
