--- a/src/apply_logreg.ipynb
+++ b/src/apply_logreg.ipynb
@@ -2,11 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'Union'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mUnion\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlogistic_regression\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m MultinomialLogisticRegression\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'Union'"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "import Union\n",
     "from logistic_regression import MultinomialLogisticRegression\n",
     "import pandas as pd"
    ]
@@ -17,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cHL2 = MultinomialLogisticRegression(random_state = 42, n_jobs=-1, max_iter=1000)"
+    "cHL2 = MultinomialLogisticRegression(random_state = 42, n_jobs=-1, max_iter=1000, class_weight='balanced')"
    ]
   },
   {
